--- a/css/inicio.css
+++ b/css/inicio.css
@@ -2,7 +2,7 @@
 
 .section-inicio {
   position: relative;
-  background-image: url(../img/fondo\ 3.png);
+  background-image: url("../img/PapelTexturaFondo.svg");
   background-size: cover;
   background-position: center;
   display: flex;
@@ -12,6 +12,12 @@
   scroll-margin-top: 80px;
 }
 
+.imagen-section-inicio {
+  width: 100%;
+}
+
+
+/* 
 .section-inicio-title,
 .section-inicio-description {
   color: var(--color2);
@@ -116,4 +122,4 @@
     padding-left: 30px;
     margin: 0%;
   }
-}
+} */
