--- a/css/header.css
+++ b/css/header.css
@@ -1,5 +1,5 @@
 /*Header*/
-header {
+/* header {
   width: 100vw;
   background-color: white;
   height: 76.5px;
@@ -9,6 +9,15 @@ header {
   transform: translate(-50%, 0%);
   left: 50%;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+} */
+
+header {
+  width: 100vw;
+  height: 76.5px;
+  background-color: var(--color2);
+  position: fixed;
+  z-index: 50;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 .header {
@@ -17,7 +26,7 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 1.5rem;
+  padding: 1rem;
   top: 0;
   position: relative;
   background-color: white;
