--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,15 @@
 /*Fuente*/
-@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Sora:wght@100..800&display=swap');
 @import url("https://cdn-uicons.flaticon.com/2.6.0/uicons-brands/css/uicons-brands.css");
 
 /*Paleta de colores*/
 :root {
-  --color1: #780ea7;
+  --color1: #754DD4;
   --color2: #ffffff;
-  --color3: #0e357a;
-  --color4: #272727;
-  --color5: #fbf3ff;
-  --color6: #5c0481;
-  --color7: #efefef;
+  --color3: #000000;
+  --color4: #3B3B3C;
+  --color5: #E1E1E1;
+  --color6: #11CCB6;
 }
 
 /*Estilos Generales*/
@@ -21,7 +20,7 @@
   box-sizing: border-box;
   list-style: none;
   text-decoration: none;
-  font-family: "Inter", sans-serif;
+  font-family: "Sora", serif;
   scroll-behavior: smooth;
 }
 a:active,
@@ -29,17 +28,22 @@ a:visited {
   text-decoration: none;
 }
 
-.body {
+body, h1, h2, p {
+  margin: 0;
+  padding: 0;
+}
+
+/* .body {
   width: 100vw;
   margin: auto;
   display: flex;
   flex-direction: column;
   justify-content: center;
   color: var(--color4);
-}
+} */
 
 main {
-  margin-top: 76.5px;
+  /* margin-top: 76.5px; */
 }
 
 .wrapper {
@@ -48,16 +52,6 @@ main {
   margin: auto;
 }
 
-.btn-generic {
-  min-width: 210px;
-  display: flex;
-  justify-content: center;
-  text-decoration: none;
-  border-radius: 5px;
-  transition: 0.3s ease;
-  font-weight: bold;
-  padding: 15px 30px;
-}
 
 @media screen and (min-width: 768px) {
   main {
