--- a/css/skills.css
+++ b/css/skills.css
@@ -1,3 +1,82 @@
+/* Sección de Skills */
+
+ .section-skills {
+  text-align: center;
+  padding: 20px;
+}
+
 .titulo-skills {
   content: url("/img/TituloSkillsMobile.svg");
+  margin-bottom: 20px;
+  max-width: 100%;
+}
+
+/* .skills-container {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+} */
+
+.skills-container {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 15px;
+}
+
+
+.skill {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--color5);
+  border-radius: 8px;
+  padding: 10px;
+  gap: 10px;
+  min-width: 230px;
+  margin: 0 auto;
+
+}
+
+.skill img {
+  width: 32px;
+  height: 32px;
+}
+
+.skill span {
+  font-size: 1rem;
+  font-weight: 700;
+  color:var(--color3);
+}
+
+.skills-container h2 {
+  font-size: 1rem;
+  font-weight: 700;
+  color:var(--color3);
+  margin: 10px 0;
+}
+
+
+@media screen and (min-width: 768px) {
+  
+.skills-container {
+    grid-template-columns: repeat(2, 1fr); 
+    max-width: 600px;
+    margin: 0 auto;
+}
+}
+
+
+@media screen and (min-width: 1024px) {
+.titulo-skills {
+    content: url("/img/TituloSkillsDesktop.svg");
+}
+.skills-container {
+  grid-template-columns: repeat(3, 1fr); 
+  max-width: 900px;
+}
+
+.skill {
+  max-width: none; 
+  padding: 15px;
+}
 }
