--- a/css/proyectos.css
+++ b/css/proyectos.css
@@ -7,7 +7,6 @@
 
 .section-proyectos h1 {
   font-size: 1.75rem;
-  /* padding: 20px; */
   margin-bottom: 20px;
 }
 
@@ -49,7 +48,7 @@
 .content-info p {
   font-size: 0.9rem;
   text-align: center;
-  margin-bottom: 10px;
+  margin: 15px 0px;
 }
 
 .content-info button {
