--- a/css/header.css
+++ b/css/header.css
@@ -29,7 +29,7 @@ header {
   padding: 1rem;
   top: 0;
   position: relative;
-  background-color: white;
+  background-color: var(--color2);
 }
 
 .logo {
@@ -91,6 +91,17 @@ header {
 
 .lista-menu li a {
   color: var(--color3);
+}
+
+.download-button {
+  background-color: var(--color1);
+  color: var(--color2);
+  font-size: 0.9rem;
+  font-weight: 700;
+  padding: 10px;
+  border-radius: 10px;
+  border: none;
+  width: 60%;
 }
 
 @media screen and (min-width: 768px) {
