--- a/css/proyectos.css
+++ b/css/proyectos.css
@@ -1,96 +1,116 @@
+
+/* Sección de proyectos */
 .section-proyectos {
   background-color: var(--color1);
-  text-align: center;
   padding: 20px;
-  color: var(--color2);
 }
 
 .section-proyectos h1 {
-  font-size: 1.75rem;
-  margin-bottom: 20px;
+  color: var(--color2);
+  text-align: center;
+  font-size: 1.5rem;
+  margin: 30px 0px;
 }
 
+/* Botones de categorías */
 .content-buttons {
   display: flex;
   flex-direction: column;
-  gap: 10px;
-  margin-bottom: 30px;
+  align-items: center;
+  gap: 20px;
+  margin: 40px 0px;
 }
 
 .content-buttons button {
+  min-width: 230px;
   background-color: var(--color6);
-  color: var(--color2);
-  font-size: 1.1rem;
-  font-weight: 700;
-  padding: 10px;
-  border-radius: 10px;
   border: none;
-  width: 100%;
+  border-radius: 8px;
+  color: var(--color2);
+  font-size: 1rem;
+  font-weight: 600;
+  padding: 10px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
 }
 
+.content-buttons button:hover {
+  background-color: #09a08e;
+}
+
+/* Contenido de los proyectos */
 .section-proyectos-content {
-  display: grid;
-  grid-template-columns: 1fr;
+  display: flex;
+  flex-direction: column;
   gap: 20px;
 }
 
-.section-proyectos-content img {
+/* .img-proyectos {
+  width: 100%;
+  height: 400px;
+} */
+
+.img-proyectos img {
   max-width: 100%;
   border-radius: 10px;
 }
 
+/* Imágenes de los proyectos */
+.img-proyectos img,
+.section-proyectos-content img {
+  width: 100%;
+  border-radius: 10px;
+  }
+
+/* Información de los proyectos */
+.content-info {
+  margin-bottom: 30px;
+}
+
 .content-info h3 {
-  font-size: 1.1rem;
-  text-align: center;
-  margin-bottom: 5px;
+  font-size: 1rem;
+  margin-bottom: 20px;
+  color: var(--color2);
 }
 
 .content-info p {
   font-size: 0.9rem;
-  text-align: center;
-  margin: 15px 0px;
+  line-height: 1.5;
+  margin-bottom: 20px;
+  color: var(--color2)
 }
 
+/* Botones de tecnologías */
 .content-info button {
   background-color: var(--color7);
+  border: 1px solid var(--color7);
+  border-radius: 8px;
   color: var(--color3);
-  border: none;
-  padding: 5px 10px;
   font-size: 0.8rem;
-  border-radius: 5px;
-  margin: 2px;
+  padding: 5px 10px;
+  margin-right: 5px;
+  margin-bottom: 5px;
+  cursor: default;
 }
 
+.content-info button:hover {
+  background-color: var(--color5);
+}
 
+/* Ajustes responsivos */
 @media (min-width: 768px) {
- 
+  .content-buttons {
+    flex-direction: row;
+  }
+
   .section-proyectos-content {
-    grid-template-columns: 1fr 1fr; 
+    flex-direction: row;
+    flex-wrap: wrap;
     gap: 30px;
   }
 
-  .content-info h3 {
-    font-size: 1.2rem;
-  }
-
-  .content-info p {
-    font-size: 1rem;
+  .content-info {
+    width: 100%;
   }
 }
 
-@media (min-width: 1024px) {
- 
-  .section-proyectos-content {
-    grid-template-columns: 1fr 1fr; 
-    gap: 40px;
-  }
-
-  .content-buttons {
-    flex-direction: row; 
-  }
-
-  .content-buttons button {
-    width: auto;
-    margin: 0 10px; 
-  }
-}
