--- a/css/sobreMi.css
+++ b/css/sobreMi.css
@@ -8,13 +8,33 @@
 
 .section-sobre-mi h1 {
   font-size: 1.75rem;
-  margin: 20px 0px;
+  margin: 35px 0px;
   color: var(--color3);
+  font-weight: 700;
 }
 
 .section-sobre-mi p {
   font-size: 1rem;
-  margin-bottom: 20px;
+  /* margin-bottom: 40px; */
   text-align: justify;
   line-height: 1.5rem
+}
+
+.formacion {
+  display: flex;
+  flex-direction:row;
+  align-items: center;
+  gap: 25px;
+  margin-bottom: 20px ;
+}
+
+h4 {
+  font-size: 1.1rem;
+  font-weight: 600;
+  text-align: left;
+}
+
+.texto-formacion p {
+  font-size: 0.9rem;
+  font-weight: 400;
 }
