--- a/css/footer.css
+++ b/css/footer.css
@@ -2,16 +2,13 @@
 footer {
   background-color: var(--color4);
   color: var(--color2);
-  padding: 3rem 30px;
-  
+  padding: 3rem 30px; 
 }
 
 .footer-container {
   max-width: 1200px;
   margin: 0 auto;
-  scroll-margin-top: 80px;
 }
-
 
 .grid-footer {
   display: grid;
@@ -21,34 +18,15 @@ footer {
 }
 
 
-.logo-footer {
-  width: 150px;
-  margin: 0 auto;
-}
-
-
-.footer-description p {
-  font-size: 0.8rem;
-  color: var(--color2);
-  margin-top: 1rem;
-}
-
-
-.footer-menu ul {
-  list-style: none;
-  padding: 0;
-}
-
-.footer-menu ul li {
-  font-size: 1rem;
-  margin: 15px 0;
-}
-
 footer h3 {
-  font-size: 1rem;
+  font-size: 1.2rem;
   margin-bottom: 10px;
+  text-align: center;
 }
 
+.footer-contacto {
+  margin-bottom: 20px;
+}
 
 .footer-contacto .contacto {
   display: flex;
