--- a/css/inicio.css
+++ b/css/inicio.css
@@ -9,6 +9,7 @@
   flex-direction: column;
   align-items: center;
   padding: 20px;
+
   text-align: center;
   scroll-margin-top: 80px;
 }
@@ -67,11 +68,13 @@
 }
 
 @media screen and (min-width: 768px) {
-  
+
+  }
 
 }
 
 
 @media screen and (min-width: 1024px) {
- 
+
+  }
 }
