--- a/css/footer.css
+++ b/css/footer.css
@@ -1,6 +1,6 @@
 
 footer {
-  background-color: var(--color4);
+  background-color: var(--color1);
   color: var(--color2);
   padding: 3rem 30px; 
 }
@@ -13,15 +13,19 @@ footer {
 .grid-footer {
   display: grid;
   grid-template-columns: 1fr;
-  gap: 2rem;
+  gap: 1rem;
   text-align: center;
 }
-
 
 footer h3 {
   font-size: 1.2rem;
   margin-bottom: 10px;
   text-align: center;
+}
+
+footer p {
+  font-size: 0.9rem;
+  margin-bottom: 40px;
 }
 
 .footer-contacto {
