--- a/css/header.css
+++ b/css/header.css
@@ -13,7 +13,7 @@
 
 header {
   width: 100vw;
-  height: 76.5px;
+  /* height: 76.5px; */
   background-color: var(--color2);
   position: fixed;
   z-index: 50;
@@ -27,7 +27,7 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 1rem;
+  padding: 0px 20px;
   top: 0;
   position: relative;
   background-color: var(--color2);
