--- a/css/inicio.css
+++ b/css/inicio.css
@@ -9,9 +9,9 @@
   flex-direction: column;
   align-items: center;
   padding: 20px;
-
   text-align: center;
   scroll-margin-top: 80px;
+  
 }
 
 /* .wrapper {
@@ -25,6 +25,7 @@
   width: 100%;
   max-width: 250px;
   margin-bottom: 20px;
+  padding-top: 60px;
 }
 
 .section-inicio-title {
@@ -63,18 +64,18 @@
 }
 
 .buttons img {
-  width: 40px;
-  height: 40px;
+  width: 32px;
+  height: 32px;
 }
 
 @media screen and (min-width: 768px) {
 
   }
 
-}
+
 
 
 @media screen and (min-width: 1024px) {
 
   }
-}
+
