--- a/css/sobreMi.css
+++ b/css/sobreMi.css
@@ -6,6 +6,10 @@
   gap: 48px;
 }
 
+.info {
+  margin-bottom: 60px;
+}
+
 .section-sobre-mi h1 {
   font-size: 1.75rem;
   margin: 35px 0px;
@@ -18,6 +22,10 @@
   /* margin-bottom: 40px; */
   text-align: justify;
   line-height: 1.5rem
+}
+
+.container-formacion {
+  margin: 40px 0px;
 }
 
 .formacion {
