--- a/css/style.css
+++ b/css/style.css
@@ -9,9 +9,10 @@
   --color3: #000000;
   --color4: #3B3B3C;
   --color5: #E1E1E1;
-  --color6: #11CCB6;
+  --color6: #22ccb8;
   --color7: #DAD8D8;
-  --color8: #5723cf;
+  --color8: #521cd1;
+  --color9: #03ccb5;
 }
 
 /*Estilos Generales*/
