--- a/css/inicio.css
+++ b/css/inicio.css
@@ -8,24 +8,16 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 20px;
+  padding: 25px;
   text-align: center;
   scroll-margin-top: 80px;
-  
 }
-
-/* .wrapper {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  max-width: 400px;
-} */
 
 .imagen-section-inicio {
   width: 100%;
   max-width: 250px;
   margin-bottom: 20px;
-  padding-top: 60px;
+  padding-top: 30px;
 }
 
 .section-inicio-title {
@@ -77,5 +69,65 @@
 
 @media screen and (min-width: 1024px) {
 
+  .section-inicio {
+    background-image: url("../img/PapelTexturaFondo.svg");
+    position: relative;
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: center;
+    padding: 30px;
+    text-align: center;
+    max-width: 1200px;
+    /* scroll-margin-top: 80px; */
   }
+
+  .imagen-section-inicio {
+    max-width: 600px;
+  }
+
+  .section-inicio-title {
+    font-size: 2.5rem;
+  }
+
+  .main-section-inicio-content h2 {
+    font-size: 2.5rem;
+  }
+
+  .main-section-inicio-content h2::before {
+    content: "";
+    display: inline-block;
+    width: 32px;
+    height: 32px;
+    margin-right: 8px;
+    background-image: url("../img/chek\ 1.svg");
+    background-size: contain;
+    background-repeat: no-repeat;
+  }
+
+  .main-section-inicio-content{
+    text-align: start;
+    padding: 0px 30px ;
+  }
+
+  .section-inicio-description {
+    width: 600px;
+    text-align: start;
+    font-size: 1.2rem;
+   }
+
+  .buttons {
+    display: flex;
+    justify-content: start;
+    gap: 30px;
+    margin: 20px 0px;
+  }
+
+  .buttons img {
+    width: 48px;
+    height: 48px;
+  }
+
+   }
 
