--- a/css/inicio.css
+++ b/css/inicio.css
@@ -108,7 +108,7 @@
 
   .main-section-inicio-content{
     text-align: start;
-    padding: 0px 30px ;
+    padding-left: 30px;
   }
 
   .section-inicio-description {
