--- a/css/proyectos.css
+++ b/css/proyectos.css
@@ -69,7 +69,7 @@
 
 .content-info h3 {
   font-size: 1rem;
-  margin-bottom: 20px;
+  margin: 20px 0px;
   color: var(--color2);
 }
 
@@ -98,19 +98,57 @@
 }
 
 /* Ajustes responsivos */
+
 @media (min-width: 768px) {
-  .content-buttons {
-    flex-direction: row;
-  }
 
   .section-proyectos-content {
     flex-direction: row;
+    justify-content: center;
     flex-wrap: wrap;
-    gap: 30px;
+  }
+
+  .proyecto {
+    flex-direction: row;
+    text-align: left;
+    max-width: 800px;
+  }
+
+  .proyecto:nth-child(odd) {
+    flex-direction: row-reverse;
   }
 
   .content-info {
-    width: 100%;
+    max-width: none;
+    padding: 0 20px;
   }
 }
+
+
+@media (min-width: 1024px) {
+
+  .section-proyectos-content {
+    justify-content: space-between;
+    gap: 40px;
+  }
+
+  .proyecto {
+    max-width: 1000px;
+    margin: 0 auto;
+  }
+
+  .img-proyectos img {
+    max-width: 450px;
+  }
+
+  .content-info {
+    padding: 0 30px;
+  }
+
+  .content-buttons {
+    flex-direction: row;
+    justify-content: center;
+    gap: 20px;
+  }
+}
+
 
