--- a/css/header.css
+++ b/css/header.css
@@ -1,11 +1,11 @@
 /*Header*/
-header {
+/* header {
   width: 100vw;
   background-color: var(--color2);
   position: fixed;
   z-index: 50;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-}
+} */
 
 .header {
   width: 100%;
@@ -15,8 +15,10 @@ header {
   align-items: center;
   padding: 20px 30px;
   top: 0;
-  /* position: relative; */
   background-color: var(--color2);
+  position: fixed;
+  z-index: 9999;
+  box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2)
   
 }
 
@@ -65,7 +67,7 @@ header {
 .lista-menu {
   align-items: end;
   list-style-type: none;
-  gap: 3rem;
+  gap: 1.5rem;
 }
 
 .lista-menu li {
@@ -133,11 +135,13 @@ header {
 }
 
 @media screen and (min-width: 1024px) {
-  header {
+  /* header {
+    background-color: red;
     height: 168px;
-  }
+  } */
 
   .header {
+    background-color: green;
     max-width: 1200px;
     gap: 20px;
     margin: auto;
@@ -194,5 +198,6 @@ header {
 
   .btn {
     padding: 10px 10px;
+    margin-left: auto
 }
 }
