--- a/css/inicio.css
+++ b/css/inicio.css
@@ -70,7 +70,6 @@
 @media screen and (min-width: 1024px) {
 
   .section-inicio {
-    background-image: url("../img/PapelTexturaFondo.svg");
     position: relative;
     background-size: cover;
     background-position: center;
@@ -80,8 +79,8 @@
     padding: 30px;
     text-align: center;
     max-width: 1200px;
-    /* scroll-margin-top: 80px; */
-  }
+    justify-content: space-between;
+}
 
   .imagen-section-inicio {
     max-width: 600px;
@@ -101,7 +100,7 @@
     width: 32px;
     height: 32px;
     margin-right: 8px;
-    background-image: url("../img/chek\ 1.svg");
+    background-image: url("../img/ico_chek.svg");
     background-size: contain;
     background-repeat: no-repeat;
   }
@@ -122,6 +121,7 @@
     justify-content: start;
     gap: 30px;
     margin: 20px 0px;
+    align-items: center;
   }
 
   .buttons img {
