--- a/css/style.css
+++ b/css/style.css
@@ -57,13 +57,13 @@ body, h1, h2, p {
 
 
 @media screen and (min-width: 768px) {
-  main {
+  /* main {
     margin-top: 100px;
-  }
+  } */
 }
 
 @media screen and (min-width: 1024px) {
-  main {
+  /* main {
     margin-top: 168px;
-  }
+  } */
 }
