--- a/css/inicio.css
+++ b/css/inicio.css
@@ -8,7 +8,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 30px;
+  padding: 0px 30px;
   text-align: center;
   padding-top: 100px;
 }
@@ -76,11 +76,10 @@
     display: flex;
     flex-direction: row-reverse;
     align-items: center;
-    padding: 30px;
     text-align: center;
     max-width: 1200px;
     justify-content: space-between;
-}
+  }
 
   .imagen-section-inicio {
     max-width: 600px;
