--- a/css/sobreMi.css
+++ b/css/sobreMi.css
@@ -45,3 +45,55 @@ h4 {
   font-size: 0.8rem;
   font-weight: 400;
 }
+
+@media screen and (min-width: 768px) {
+
+}
+
+
+@media screen and (min-width: 1024px) {
+
+  /* .section-sobre-mi {
+    text-align: center;
+    padding: 20px;
+    color: var(--color4);
+    gap: 48px;
+  } */
+  
+  .info, .container-formacion {
+    margin-bottom: 60px;
+    display: flex;
+    flex-direction:row;
+    justify-content: space-around;
+    align-items: center;
+    height: 350px;
+  }
+  
+  .section-sobre-mi h1 {
+    font-size: 2.5rem;
+  }
+  
+  .section-sobre-mi p {
+    font-size: 1.1rem;
+    line-height: 1.8rem;
+    max-width: 600px;
+  }
+
+  .container-formacion {
+    height: 400px;
+  }
+
+  .container-formaciones {
+    max-width: 600px;
+  }
+
+   
+  h4 {
+    font-size: 1.3rem;
+}
+  
+  .texto-formacion p {
+    font-size: 1.1rem;
+  }
+
+}
