cambios en section proyectos

--- a/css/proyectos.css
+++ b/css/proyectos.css
@@ -1,4 +1,3 @@
-
 /* Sección de proyectos */
 .section-proyectos {
   background-color: var(--color1);
@@ -58,7 +57,7 @@
   height: 200px;
   border-radius: 10px;
   object-fit: cover;
-  overflow: hidden; 
+  overflow: hidden;
   display: block;
 }
 
@@ -76,7 +75,7 @@
   font-size: 0.9rem;
   line-height: 1.5;
   margin-bottom: 20px;
-  color: var(--color2)
+  color: var(--color2);
 }
 
 /* Botones de tecnologías */
@@ -99,7 +98,7 @@
 /* Ajustes responsivos */
 
 @media (min-width: 768px) {
-/* 
+  /* 
   .section-proyectos-content {
     flex-direction: row;
     justify-content: center;
@@ -122,76 +121,71 @@
   } */
 }
 
-
 @media (min-width: 1024px) {
-
   .video-proyectos {
     width: 100%;
     height: auto;
     border-radius: 10px;
     display: block;
   }
-  
+
   .video-proyectos video {
     width: 500px;
     height: 320px;
     border-radius: 10px;
     object-fit: cover;
-    overflow: hidden; 
+    overflow: hidden;
     display: block;
   }
 
-.section-proyectos h1 {
-  font-size: 2.5rem;
-}
+  .section-proyectos h1 {
+    font-size: 2.5rem;
+  }
 
-.content-buttons {
-  flex-direction: row;
-  justify-content: center;
-  gap: 20px;
-}
+  .content-buttons {
+    flex-direction: row;
+    justify-content: center;
+    gap: 20px;
+  }
 
-.content-buttons a {
-  font-size: 1.2rem;
-}
+  .content-buttons a {
+    font-size: 1.2rem;
+  }
 
-.content-buttons a:hover {
-  background-color: var(--color9);
-}
+  .content-buttons a:hover {
+    background-color: var(--color9);
+  }
 
-.proyecto {
-  align-items: center;
-  justify-content: space-between;
-  display: flex;
-  flex-direction: row;
-  max-width: 1220px;
-  height: 430px;
-  margin: 0 auto;
-  gap: 40px;
-}
+  .proyecto {
+    align-items: center;
+    justify-content: space-between;
+    display: flex;
+    flex-direction: row;
+    max-width: 1220px;
+    height: 430px;
+    margin: 0 auto;
+    gap: 20px;
+  }
 
-.proyecto:nth-child(even) {
-  flex-direction: row-reverse;
-  padding-right: 20px;
-}
+  .proyecto:nth-child(even) {
+    flex-direction: row-reverse;
+  }
 
-.img-proyectos {
-  width: 600px;
-  border-radius: 10px;
-  padding-left: 20px;
-}
+  .img-proyectos {
+    width: 600px;
+    border-radius: 10px;
+    padding-left: 20px;
+  }
 
-.content-info {
-  padding: 0 30px;
-}
+  .content-info {
+    padding: 0 30px;
+  }
 
-.content-info h3 {
-  font-size: 1.8rem;
-}
+  .content-info h3 {
+    font-size: 1.8rem;
+  }
 
-.content-info p {
-  font-size: 1.1rem;
+  .content-info p {
+    font-size: 1.1rem;
+  }
 }
-}
-
-
