optimization html y cambios en css varios

--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@
   --color6: #22ccb8;
   --color7: #DAD8D8;
   --color8: #521cd1;
-  --color9: #03ccb5;
+  --color9: #1ea595;
 }
 
 /*Estilos Generales*/
