--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@
   --color5: #E1E1E1;
   --color6: #22ccb8;
   --color7: #DAD8D8;
-  --color8: #521cd1;
+  --color8: #693ad6;
   --color9: #1ea595;
 }
 
