--- a/css/header.css
+++ b/css/header.css
@@ -1,35 +1,30 @@
-/*Header*/
 
-.header {
+.wrapper-header  {
   width: 100%;
-  margin: auto;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 20px 30px;
+  padding: 15px 30px;
+  box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2);
+  max-width: 1200px;
+  margin: auto;
   top: 0;
   background-color: var(--color2);
   position: fixed;
   z-index: 9999;
-  box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2)
 }
 
 .logo {
-  content: url("/img/ICO\ MP.png");
+  content: url("/img/ICO MP.png");
   width: 80px;
   z-index: 10000;
   position: relative;
 }
 
-.icon-menu {
-  display: block;
-  font-size: 1.5rem;
-  color: var(--color3);
-}
-
+.icon-menu,
 .icon-cross {
   display: block;
-  font-size: 1.3rem;
+  font-size: 1.5rem;
   color: var(--color3);
 }
 
@@ -62,16 +57,13 @@
   gap: 1.5rem;
 }
 
-.lista-menu li {
+.lista-menu li a {
   font-size: 1.2rem;
   line-height: 2.5rem;
   font-weight: 600;
   position: relative;
   display: flex;
   justify-content: flex-end;
-}
-
-.lista-menu li a {
   color: var(--color3);
 }
 
@@ -84,90 +76,93 @@
   border-radius: 5px;
   font-weight: bold;
   text-align: center;
+  font-size: 1rem;
 }
 
 .btn img {
-  width: 16px; 
-  margin-left: 5px; 
+  width: 16px;
+  margin-left: 5px;
   vertical-align: middle;
 }
 
 .btn:hover {
-  background-color: var(--color8)
+  background-color: var(--color8);
 }
 
-
+/* Estilos para tablet */
 @media screen and (min-width: 768px) {
-  header {
-    height: 100px;
+
+  .wrapper-header {
+    height: 90px;
   }
 
-.logo {
-    content: url("/img/ICO\ MP.png");
-    width: 150px;
+  .logo {
+    width: 100px;
   }
 
   .icon-menu,
   .icon-cross {
-    font-size: 2rem;
+    font-size: 1.8rem;
   }
 
-  .menu {
-    width: 100%;
-    background-color: var(--color2);
-    padding: 2rem;
-    box-shadow: 0 0 0 100vmax rgba(0, 0, 0, 0.5);
-    z-index: 9999;
-    transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
+  .lista-menu li a {
+    font-size: 1.3rem;
+  }
+
+  .btn {
+    font-size: 1.2rem;
   }
 }
 
+/* Estilos para desktop */
 @media screen and (min-width: 1024px) {
- 
 
-  .header {
-    max-width: 100vw;
-    gap: 20px;
+.wrapper-header {
+    height: 80px;
+    max-width: 1200px;
     margin: auto;
-    
+    background-color: red;
+    display: flex;
   }
 
+
   .logo {
+    background-color: yellow;
     content: url("/img/LogoConNombre.svg");
-    width: 200px;
+    width: 180px;
+  }
+
+  .icon-menu,
+  .icon-cross {
+    display: none;
   }
 
   .menu {
     opacity: 1;
     visibility: visible;
-    display: flex;
     flex-direction: row;
-    position: static;
+    position: absolute;
     align-items: center;
-    justify-content: flex-end;
+    justify-content: end;
     gap: 1rem;
     background-color: transparent;
     box-shadow: none;
-    z-index: 1;
+    
   }
 
   .lista-menu {
+    background-color: aqua;
     display: flex;
     list-style: none;
     font-weight: 600;
     gap: 1rem;
-    white-space: nowrap;
   }
 
-  .lista-menu li {
-    display: inline-block;
-  }
-
-  .lista-menu a {
+  .lista-menu li a {
     display: block;
     padding: 8px;
     color: var(--color3);
-    font-size: 1.1rem;
+    font-size: 1.2rem;
   }
 
   .lista-menu a:hover {
@@ -176,13 +171,12 @@
     border-radius: 5px;
   }
 
-  .icon-menu,
-  .icon-cross {
-    display: none;
+  .btn {
+    font-size: 1.3rem;
   }
 
-  .btn {
-    padding: 10px 10px;
-    margin-left: auto
+  .btn img {
+    width: 24px;
+  }
 }
-}
+
