--- a/css/skills.css
+++ b/css/skills.css
@@ -2,13 +2,13 @@
 
  .section-skills {
   text-align: center;
-  padding-bottom: 30px;
 }
 
 .titulo-skills-wrapper {
   overflow: hidden;  
   white-space: nowrap;
   display: flex;
+  
 }
 
 .titulo-skills {
@@ -27,11 +27,10 @@
   }
 }
 
-.skills-container {
+.contenedor-skills-1, .contenedor-skills-2 {
   display: grid;
-  grid-template-columns: 1fr;
   gap: 15px;
-  margin-bottom: 20px;
+  padding: 20px 0px;
 }
 
 .skill {
@@ -41,9 +40,9 @@
   background-color: var(--color5);
   border-radius: 8px;
   padding: 10px 0px;
-  gap: 10px;
-  min-width: 230px;
+  min-width: 200px;
   margin: 0 auto;
+  gap: 15px;
 }
 
 .skill img {
@@ -62,28 +61,40 @@
   font-weight: 700;
   color:var(--color3);
   margin: 10px 0;
-}
+  background-color: var(--color10);
+  padding: 10px;
+ }
 
 
 @media screen and (min-width: 768px) {
-  
+
+.contenedor-skills-1, .contenedor-skills-2  {
+    grid-template-columns: repeat(3,1fr);
+    max-width: 1200px;
 }
 
+.skill {
+    max-width: none;
+}
+
+.skill span {
+  font-size: 1.1rem;
+}
+
+.skills-container h2 {
+  font-size: 1.2rem;
+ }
+  
+}
 
 @media screen and (min-width: 1024px) {
 
 .section-skills {
-  text-align: center;
-  padding-bottom: 40px;
+ padding-bottom: 40px;
 }
 
-.skills-container {
-  grid-template-columns: repeat(3,1fr);
-  max-width: 1200px;
-}
-
-.skill {
-  max-width: none;
-}
+.skills-container h2 {
+  font-size: 1.3rem;
+ }
 
 }
