--- a/css/skills.css
+++ b/css/skills.css
@@ -31,6 +31,7 @@
   display: grid;
   gap: 15px;
   padding: 20px 0px;
+  margin-bottom: 20px;
 }
 
 .skill {
@@ -69,8 +70,18 @@
 @media screen and (min-width: 768px) {
 
 .contenedor-skills-1, .contenedor-skills-2  {
-    grid-template-columns: repeat(3,1fr);
-    max-width: 1200px;
+    
+footer h3 {
+  font-size: 1.2rem;
+  margin-bottom: 10px;
+  text-align: center;
+}
+
+footer p {
+  font-size: 0.9rem;
+  margin-bottom: 40px;
+  line-height: 1.5rem;
+}
 }
 
 .skill {
