--- a/css/sobreMi.css
+++ b/css/sobreMi.css
@@ -48,17 +48,25 @@ h4 {
 
 @media screen and (min-width: 768px) {
 
+  .section-sobre-mi h1 {
+    font-size: 1.8rem;
+  }
+
+  .section-sobre-mi p {
+    font-size: 1.1rem;
+    line-height: 1.8rem
 }
 
+h4 {
+  font-size: 1.2rem;
+}
+
+.texto-formacion p {
+  font-size: 0.9rem;
+}
+}
 
 @media screen and (min-width: 1024px) {
-
-  /* .section-sobre-mi {
-    text-align: center;
-    padding: 20px;
-    color: var(--color4);
-    gap: 48px;
-  } */
   
   .info, .container-formacion {
     margin-bottom: 60px;
