--- a/css/header.css
+++ b/css/header.css
@@ -1,3 +1,28 @@
+/*Header*/
+/* header {
+  width: 100vw;
+  background-color: var(--color2);
+  height: 76.5px;
+  position: fixed;
+  z-index: 50;
+  top: 0;
+  transform: translate(-50%, 0%);
+  left: 50%;
+  background-color: yellow;
+} */
+
+/* .header {
+  width: 100%;
+  margin: auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1.5rem;
+  top: 0;
+  position: relative;
+  background-color: var(--color2);
+  background-color: red;
+} */
 
 .wrapper-header  {
   width: 100%;
@@ -12,17 +37,16 @@
   background-color: var(--color2);
   position: fixed;
   z-index: 9999;
-}
+ }
 
 .logo {
-  content: url("/img/ICO MP.png");
+  content: url("../img/ICO-MP.svg");
   width: 80px;
   z-index: 10000;
   position: relative;
 }
 
-.icon-menu,
-.icon-cross {
+.icon-menu, .icon-cross {
   display: block;
   font-size: 1.5rem;
   color: var(--color3);
@@ -54,7 +78,7 @@
 .lista-menu {
   align-items: end;
   list-style-type: none;
-  gap: 1.5rem;
+  gap: 3rem;
 }
 
 .lista-menu li a {
@@ -89,11 +113,10 @@
   background-color: var(--color8);
 }
 
-/* Estilos para tablet */
 @media screen and (min-width: 768px) {
 
-  .wrapper-header {
-    height: 90px;
+  .wrapper-header  {
+    height: 100px;
   }
 
   .logo {
@@ -105,6 +128,15 @@
     font-size: 1.8rem;
   }
 
+  .menu {
+    width: 100%;
+    background-color: var(--color2);
+    padding: 2rem;
+    box-shadow: 0 0 0 100vmax rgba(0, 0, 0, 0.5);
+    z-index: 9999;
+    transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
+  }
+
   .lista-menu li a {
     font-size: 1.3rem;
   }
@@ -114,21 +146,24 @@
   }
 }
 
-/* Estilos para desktop */
 @media screen and (min-width: 1024px) {
-
-.wrapper-header {
-    height: 80px;
+  
+.header {
     max-width: 1200px;
+    gap: 20px;
     margin: auto;
-    background-color: red;
-    display: flex;
   }
 
+.wrapper-header  {
+    height: 120px;
+    max-width: 100vw;
+    margin: auto;
+    display: flex;
+ }
+  
 
-  .logo {
-    background-color: yellow;
-    content: url("/img/LogoConNombre.svg");
+.logo {
+    content: url("../img/LogoConNombre.svg");
     width: 180px;
   }
 
@@ -137,25 +172,30 @@
     display: none;
   }
 
-  .menu {
+.menu {
     opacity: 1;
     visibility: visible;
+    display: flex;
     flex-direction: row;
-    position: absolute;
+    position: static;
     align-items: center;
-    justify-content: end;
+    justify-content: flex-end;
     gap: 1rem;
     background-color: transparent;
     box-shadow: none;
-    
+    z-index: 1;
   }
 
   .lista-menu {
-    background-color: aqua;
     display: flex;
     list-style: none;
     font-weight: 600;
     gap: 1rem;
+    white-space: nowrap;
+  }
+
+  .lista-menu li {
+    display: inline-block;
   }
 
   .lista-menu li a {
@@ -171,6 +211,11 @@
     border-radius: 5px;
   }
 
+  .icon-menu,
+  .icon-cross {
+    display: none;
+  }
+
   .btn {
     font-size: 1.3rem;
   }
@@ -179,4 +224,5 @@
     width: 24px;
   }
 }
+
 
