--- a/css/inicio.css
+++ b/css/inicio.css
@@ -24,7 +24,7 @@
   align-items: center;
   text-align: center;
   padding: 0px 20px;
-  padding-top: 100px;
+  /* padding-top: 100px; */
 }
 
 .imagen-section-inicio {
