--- a/css/skills.css
+++ b/css/skills.css
@@ -72,6 +72,7 @@
 .contenedor-skills-1, .contenedor-skills-2  {
   grid-template-columns: repeat(3,1fr);
   max-width: 1200px;
+  margin: 0 auto;
 }
 
 .skill {
