--- a/css/proyectos.css
+++ b/css/proyectos.css
@@ -60,19 +60,26 @@
 }
 
 .content-info {
-  margin-bottom: 30px;
+  margin: 30px 0px;
 }
 
-.content-info h3 {
+/* .content-info h3 {
   font-size: 1rem;
   margin: 20px 0px;
   color: var(--color2);
+} */
+
+.content-info a {
+  font-size: 1.1rem;
+  margin: 20px 0px;
+  color: var(--color2);
+  font-weight: 600;
 }
 
 .content-info p {
   font-size: 0.9rem;
   line-height: 1.5;
-  margin-bottom: 20px;
+  margin: 20px 0px;
   color: var(--color2);
 }
 
@@ -114,7 +121,7 @@
     font-size: 1.2rem;
 }
 
-.content-info h3 {
+.content-info a {
   font-size: 1.3rem;
 }
 
@@ -189,7 +196,7 @@
     padding: 0 30px;
   }
 
-  .content-info h3 {
+  .content-info a {
     font-size: 1.8rem;
   }
 
