--- a/css/proyectos.css
+++ b/css/proyectos.css
@@ -56,8 +56,23 @@
   object-fit: cover;
   overflow: hidden;
   display: block;
-  
 }
+
+.loader {
+  border: 5px solid var(--color2);
+  border-top: 5px solid var(--color6);
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
+.hidden { display: none; }
 
 .content-info {
   margin: 30px 0px;
