--- a/css/proyectos.css
+++ b/css/proyectos.css
@@ -58,7 +58,7 @@
   display: block;
 }
 
-.loader {
+/* .loader {
   border: 5px solid var(--color2);
   border-top: 5px solid var(--color6);
   border-radius: 50%;
@@ -70,7 +70,7 @@
 @keyframes spin {
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
-}
+} */
 
 .hidden { display: none; }
 
@@ -178,7 +178,7 @@
   }
 
   .video-proyectos video {
-    width: 500px;
+    width: 600px;
     height: 320px;
     border-radius: 10px;
     object-fit: cover;
