cambios en proyectos y skills

--- a/css/skills.css
+++ b/css/skills.css
@@ -44,7 +44,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: var(--color5);
+  border: 3px var(--color5) solid;
   border-radius: 8px;
   padding: 10px 0px;
   min-width: 200px;
