--- a/css/proyectos.css
+++ b/css/proyectos.css
@@ -27,7 +27,7 @@
   color: var(--color2);
   font-size: 1.1rem;
   font-weight: 600;
-  padding: 10px;
+  padding: 1rem;
   cursor: pointer;
   text-align: center;
   transition: background-color 0.3s ease;
@@ -72,6 +72,10 @@
   margin: 20px 0px;
   color: var(--color2);
   font-weight: 600;
+}
+
+.content-info a:hover {
+  color: var(--color10);
 }
 
 .content-info p {
